Bug 515624 - [Wayland] Popup palette "Configure docker panel" cannot be clicked and just close popup palette
Summary: [Wayland] Popup palette "Configure docker panel" cannot be clicked and just c...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 6.0.0-beta1
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-06 14:17 UTC by Protoniv
Modified: 2026-02-18 13:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Configure docker panel option cannot be reached under wayland mode (69.96 KB, image/jpeg)
2026-02-06 14:17 UTC, Protoniv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Protoniv 2026-02-06 14:17:41 UTC
Created attachment 189284 [details]
Configure docker panel option cannot be reached under wayland mode

SUMMARY
Popup palette "Configure docker panel" button cannot clicked, it will just close popup palette as if clicking on canvas.
It is wayland specific, only happened if krita 6.0 launched with `export QT_QPA_PLATFORM=wayland`

STEPS TO REPRODUCE
1. Launch krita 6 with `export QT_QPA_PLATFORM=wayland` to make sure in native wayland mode
2. Bring up popup-palette, click on "Configure docker panel" button with mouse or stylus.
3. 

OBSERVED RESULT
Popup-palette closed

EXPECTED RESULT
Bring up configure docker panel

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux 13
KDE Plasma Version: 6.3.6
KDE Frameworks Version: 6.13.0
Qt Version: 6.8.2
Kernel Version: 6.12.63+deb13-amd64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 8700G w/ Radeon 780M Graphics
Graphics Processor: AMD Radeon Graphics

ADDITIONAL INFORMATION
Comment 1 Freya Lupen 2026-02-06 19:33:02 UTC
Confirmed.

It worked on 6.0.0-prealpha-81586693ef from October 24, so it's a regression.
Comment 2 Bug Janitor Service 2026-02-17 17:37:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2652
Comment 3 Dmitry Kazakov 2026-02-18 13:48:57 UTC
Git commit 291a86d654789be51901001941d0694676c72751 by Dmitry Kazakov, on behalf of Luna Lovecraft.
Committed on 18/02/2026 at 13:48.
Pushed by dkazakov into branch 'master'.

Fix popup palette docker config not showing up on wayland

On wayland QDialog does not like being parented to a popup window, and
immediately receives a close event, so we parent it to the main window
instead.

M  +1    -1    libs/ui/widgets/KisDockerHud.cpp

https://invent.kde.org/graphics/krita/-/commit/291a86d654789be51901001941d0694676c72751
Comment 4 Dmitry Kazakov 2026-02-18 13:49:40 UTC
Git commit c60416649af69ea7db9ebdd9043f6e06f3af75b5 by Dmitry Kazakov.
Committed on 18/02/2026 at 13:49.
Pushed by dkazakov into branch 'krita/6.0'.

Fix popup palette docker config not showing up on wayland

On wayland QDialog does not like being parented to a popup window, and
immediately receives a close event, so we parent it to the main window
instead.


(cherry picked from commit 291a86d654789be51901001941d0694676c72751)

Co-authored-by: Luna Lovecraft <ciubix8514@gmail.com>

M  +1    -1    libs/ui/widgets/KisDockerHud.cpp

https://invent.kde.org/graphics/krita/-/commit/c60416649af69ea7db9ebdd9043f6e06f3af75b5