Fix popup palette docker config not showing up on wayland

BUG:515624

On wayland QDialog does not like being parented to a popup window, and
immediately receives a close event, so we parent it to the main window
instead.


(cherry picked from commit 291a86d654789be51901001941d0694676c72751)

Co-authored-by: Luna Lovecraft <ciubix8514@gmail.com>